--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -1,25 +1,38 @@
-.modal-dialog {
+.modal {
+    position: fixed; /* Fixed positioning to center the modal */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1050; /* Ensure it appears above other content */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  }
+  
+  .modal-dialog {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    min-width: max(280px , 50vw);
+    min-width: max(280px, 50vw);
     margin: auto;
-}
-
-.modal-content {
+  }
+  
+  .modal-content {
     background-color: #fff;
     color: #000;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.5);
-}
-
-/* Dark Mode Support */
-body.bg-dark .modal-content {
+  }
+  
+  body.bg-dark .modal-content {
     background-color: #013010;
     color: #f1f1f1;
-}
-
-body.bg-dark .btn-close {
+  }
+  
+  body.bg-dark .btn-close {
     filter: invert(1);
-}
+  }
+  
