--- a/frontend/src/pages/MyProfilePage.css
+++ b/frontend/src/pages/MyProfilePage.css
@@ -11,7 +11,7 @@
 
 body.dark-mode .profile-container {
     background-color: #2c2c2c;
-    color: #fff;
+    color: #747474;
 }
 
 .profile-title {
@@ -19,8 +19,8 @@ body.dark-mode .profile-container {
     color: #333;
 }
 
-body.dark-mode .profile-title {
-    color: #fff;
+body.dark-mode .profile-title, body.dark-mode label {
+    color: #5c5c5c;
 }
 
 .profile-form .form-group {
@@ -67,16 +67,11 @@ body.dark-mode .profile-title {
     align-items: center;
 }
 .modal-content {
-    max-width: 500px; /* 限制最大寬度 */
+    max-width: 500px;
     margin: auto;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
     background-color: #fff;
-}
-
-body.dark-mode .modal-content {
-    background-color: #2c2c2c;
-    color: #fff;
 }
 
